install plotly.js

--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -60,7 +60,9 @@
 
 <link type="text/css" href="{{ config.ASSETS_ROOT }}/vendor/notyf/notyf.min.css" rel="stylesheet">
 <link type="text/css" href="{{ config.ASSETS_ROOT }}/css/volt.css" rel="stylesheet">
-
+<link rel="stylesheet" type="text/css" src="dygraph.css" />
+<script src="https://cdn.plot.ly/plotly-1.8.0.min.js"></script>
+<script type="text/javascript" src="dygraph.js"></script>
 <!-- Specific Page JS goes HERE  -->    
 {% block stylesheets %}{% endblock stylesheets %}
 
