--- a/apps/templates/home/dashboard.html
+++ b/apps/templates/home/dashboard.html
@@ -14,26 +14,9 @@
                 New Task
             </button>
             <div class="dropdown-menu dashboard-dropdown dropdown-menu-start mt-2 py-1">
-                <a class="dropdown-item d-flex align-items-center" href="#">
-                    <svg class="dropdown-icon text-gray-400 me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M8 9a3 3 0 100-6 3 3 0 000 6zM8 11a6 6 0 016 6H2a6 6 0 016-6zM16 7a1 1 0 10-2 0v1h-1a1 1 0 100 2h1v1a1 1 0 102 0v-1h1a1 1 0 100-2h-1V7z"></path></svg>
-                    Add User
-                </a>
-                <a class="dropdown-item d-flex align-items-center" href="#">
-                    <svg class="dropdown-icon text-gray-400 me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M7 3a1 1 0 000 2h6a1 1 0 100-2H7zM4 7a1 1 0 011-1h10a1 1 0 110 2H5a1 1 0 01-1-1zM2 11a2 2 0 012-2h12a2 2 0 012 2v4a2 2 0 01-2 2H4a2 2 0 01-2-2v-4z"></path></svg>                            
-                    Add Widget
-                </a>
-                <a class="dropdown-item d-flex align-items-center" href="#">
+                <a class="dropdown-item d-flex align-items-center" href="#" data-bs-toggle="modal" data-bs-target="#uploadModal">
                     <svg class="dropdown-icon text-gray-400 me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M5.5 13a3.5 3.5 0 01-.369-6.98 4 4 0 117.753-1.977A4.5 4.5 0 1113.5 13H11V9.413l1.293 1.293a1 1 0 001.414-1.414l-3-3a1 1 0 00-1.414 0l-3 3a1 1 0 001.414 1.414L9 9.414V13H5.5z"></path><path d="M9 13h2v5a1 1 0 11-2 0v-5z"></path></svg>                            
                     Upload Files
-                </a>
-                <a class="dropdown-item d-flex align-items-center" href="#">
-                    <svg class="dropdown-icon text-gray-400 me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M2.166 4.999A11.954 11.954 0 0010 1.944 11.954 11.954 0 0017.834 5c.11.65.166 1.32.166 2.001 0 5.225-3.34 9.67-8 11.317C5.34 16.67 2 12.225 2 7c0-.682.057-1.35.166-2.001zm11.541 3.708a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                    Preview Security
-                </a>
-                <div role="separator" class="dropdown-divider my-1"></div>
-                <a class="dropdown-item d-flex align-items-center" href="#">
-                    <svg class="dropdown-icon text-danger me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M12.395 2.553a1 1 0 00-1.45-.385c-.345.23-.614.558-.822.88-.214.33-.403.713-.57 1.116-.334.804-.614 1.768-.84 2.734a31.365 31.365 0 00-.613 3.58 2.64 2.64 0 01-.945-1.067c-.328-.68-.398-1.534-.398-2.654A1 1 0 005.05 6.05 6.981 6.981 0 003 11a7 7 0 1011.95-4.95c-.592-.591-.98-.985-1.348-1.467-.363-.476-.724-1.063-1.207-2.03zM12.12 15.12A3 3 0 017 13s.879.5 2.5.5c0-1 .5-4 1.25-4.5.5 1 .786 1.293 1.371 1.879A2.99 2.99 0 0113 13a2.99 2.99 0 01-.879 2.121z" clip-rule="evenodd"></path></svg>
-                    Upgrade to Pro
                 </a>
             </div>
         </div>
@@ -41,24 +24,8 @@
     <div class="row">
         <div class="col-12 mb-4">
             <div class="card bg-yellow-100 border-0 shadow">
-                <!-- <div class="card-header d-sm-flex flex-row align-items-center flex-0">
-                    <div class="d-block mb-3 mb-sm-0">
-                        <div class="fs-5 fw-normal mb-2">Sales Value</div>
-                        <h2 class="fs-3 fw-extrabold">$10,567</h2>
-                        <div class="small mt-2"> 
-                            <span class="fw-normal me-2">Yesterday</span>                              
-                            <span class="fas fa-angle-up text-success"></span>                                   
-                            <span class="text-success fw-bold">10.57%</span>
-                        </div>
-                    </div>
-                    <div class="d-flex ms-auto">
-                        <a href="#" class="btn btn-secondary text-dark btn-sm me-2">Month</a>
-                        <a href="#" class="btn btn-dark btn-sm me-3">Week</a>
-                    </div>
-                </div> -->
                 <div class="card-body ">
-                    <div id="graph"></div>
-                    <!-- <div class="ct-chart-sales-value ct-double-octave ct-series-g"></div> -->
+                    <div id="dev"></div>
                 </div>
             </div>
         </div>
@@ -186,7 +153,7 @@
                 <div class="card border-0 shadow">
                     <div class="card-header d-flex flex-row align-items-center flex-0 border-bottom">
                         <div class="d-block">
-                            <div class="h6 fw-normal text-gray mb-2">Total orders</div>
+                            <div class="h6 fw-normal text-gray mb-2">Total Peserta</div>
                             <h2 class="h3 fw-extrabold">452</h2>
                             <div class="small mt-2">                               
                                 <span class="fas fa-angle-up text-success"></span>                                   
@@ -211,75 +178,120 @@
             </div>
         </div>
     </div>
-<script>
-    var rawDataURL = 'https://raw.githubusercontent.com/plotly/datasets/master/2016-weather-data-seattle.csv';
-var xField = 'Date';
-var yField = 'Mean_TemperatureC';
+    <div class="modal fade" id="uploadModal" tabindex="-1" aria-labelledby="uploadModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="uploadModalLabel">Upload Files</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <!-- Upload Form -->
+                    <form>
+                        <div class="mb-3">
+                            <label for="fileUpload" class="form-label">Choose file to upload</label>
+                            <input type="file" class="form-control" id="fileUpload" name="fileUpload">
+                        </div>
+                        <div class="mb-3">
+                            <button type="submit" class="btn btn-primary">Upload</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <script>
+        d3.csv("https://raw.githubusercontent.com/plotly/datasets/master/finance-charts-apple.csv", function(err, rows) {
+            if (err) {
+                console.error("Error loading the CSV data:", err);
+                return;
+            }
+    
+            function unpack(rows, key) {
+                return rows.map(function(row) {
+                    return row[key];
+                });
+            }
+    
+            var trace1 = {
+                type: "scatter",
+                mode: "lines",
+                name: 'Suplai Chain',
+                x: unpack(rows, 'Date'),
+                y: unpack(rows, 'AAPL.High').map(val => parseFloat(val)),
+                line: {color: '#17BECF'}
+            };
+    
+            var trace2 = {
+                type: "scatter",
+                mode: "lines",
+                name: 'Batubara',
+                x: unpack(rows, 'Date'),
+                y: unpack(rows, 'AAPL.Low').map(val => parseFloat(val)),
+                line: {color: '#7F7F7F'}
+            };
 
-var selectorOptions = {
-    buttons: [{
-        step: 'month',
-        stepmode: 'backward',
-        count: 1,
-        label: '1m'
-    }, {
-        step: 'month',
-        stepmode: 'backward',
-        count: 6,
-        label: '6m'
-    }, {
-        step: 'year',
-        stepmode: 'todate',
-        count: 1,
-        label: 'YTD'
-    }, {
-        step: 'year',
-        stepmode: 'backward',
-        count: 1,
-        label: '1y'
-    }, {
-        step: 'all',
-    }],
-};
+            var trace3 = {
+                type: "scatter",
+                mode: "lines",
+                name: 'Inovasi Strategis',
+                x: unpack(rows, 'Date'),
+                y: unpack(rows, 'AAPL.Open').map(val => parseFloat(val)),
+                line: {color: '#1F77B4'}
+            };
 
-Plotly.d3.csv(rawDataURL, function(err, rawData) {
-    if(err) throw err;
+            // Trace untuk AAPL Close
+            var trace4 = {
+                type: "scatter",
+                mode: "lines",
+                name: 'Hydrogen',
+                x: unpack(rows, 'Date'),
+                y: unpack(rows, 'AAPL.Close').map(val => parseFloat(val)),
+                line: {color: '#FF7F0E'}
+            };
 
-    var data = prepData(rawData);
-    var layout = {
-        title: 'selectors',
-        xaxis: {
-            rangeselector: selectorOptions,
-            rangeslider: {}
-        },
-        yaxis: {
-            fixedrange: true
-        }
-    };
+            // Trace untuk AAPL Volume
+            var trace5 = {
+                type: "scatter",
+                mode: "lines",
+                name: 'Boiler',
+                x: unpack(rows, 'Date'),
+                y: unpack(rows, 'AAPL.Volume').map(val => parseFloat(val)),
+                line: {color: '#2CA02C'}
+            };
 
-    Plotly.plot('graph', data, layout, {showSendToCloud: true});
-});
+            // Trace untuk AAPL Adjusted Close
+            var trace6 = {
+                type: "scatter",
+                mode: "lines",
+                name: 'Workshop',
+                x: unpack(rows, 'Date'),
+                y: unpack(rows, 'AAPL.Adjusted').map(val => parseFloat(val)),
+                line: {color: '#D62728'}
+            };
 
-function prepData(rawData) {
-    var x = [];
-    var y = [];
-
-    console.log(rawData.length)
-
-    rawData.forEach(function(datum, i) {
-        if(i % 100) return;
-
-        x.push(new Date(datum[xField]));
-        y.push(datum[yField]);
-    });
-
-    return [{
-        mode: 'lines',
-        x: x,
-        y: y
-    }];
-}
-</script>
+    
+            var data = [trace1, trace2, trace3, trace4, trace5, trace6];
+    
+            var layout = {
+                title: {
+                    text: 'KPI Evaluasi'
+                },
+                xaxis: {
+                    title: 'Date',
+                    type: 'date'
+                },
+                yaxis: {
+                    title: 'Rata - Rata',
+                    rangemode: 'tozero'
+                }
+            };
+    
+            Plotly.newPlot('dev', data, layout);
+        });
+    </script>
+    
 
 {% endblock content %}
 
