--- a/apps/templates/home/dashboard.html
+++ b/apps/templates/home/dashboard.html
@@ -21,7 +21,170 @@
             </div>
         </div>
     </div>
+    {% if processed_data %}
+    <div class="row g-4 mb-5">
+        <div class="col-12 col-sm-6 col-xl-4">
+            <div class="card border-0 shadow h-100">
+                <div class="card-body d-flex align-items-center">
+                    <div class="icon-shape icon-shape-primary rounded me-4 p-4">
+                        <i class="bi bi-emoji-smile fs-1"></i>
+                    </div>
+                    <div>
+                        <span class="d-block h6 text-gray-400 mb-0">Sentimen Positif</span>
+                        <h2 class="h1 fw-extrabold mb-2">{{ processed_data.sentiment_counts.get('Positif', 0) }}</h2>
+                        <div class="small d-flex mt-1">
+                            <span class="text-success fw-bold">
+                                <i class="bi bi-arrow-up me-1"></i>Komentar
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 col-sm-6 col-xl-4">
+            <div class="card border-0 shadow h-100">
+                <div class="card-body d-flex align-items-center">
+                    <div class="icon-shape icon-shape-secondary rounded me-4 p-4">
+                        <i class="bi bi-emoji-neutral fs-1"></i>
+                    </div>
+                    <div>
+                        <span class="d-block h6 text-gray-400 mb-0">Sentimen Netral</span>
+                        <h2 class="h1 fw-extrabold mb-2">{{ processed_data.sentiment_counts.get('Netral', 0) }}</h2>
+                        <div class="small d-flex mt-1">
+                            <span class="text-gray-500 fw-bold">
+                                <i class="bi bi-arrow-right me-1"></i>Komentar
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 col-sm-6 col-xl-4">
+            <div class="card border-0 shadow h-100">
+                <div class="card-body d-flex align-items-center">
+                    <div class="icon-shape icon-shape-tertiary rounded me-4 p-4">
+                        <i class="bi bi-emoji-frown fs-1"></i>
+                    </div>
+                    <div>
+                        <span class="d-block h6 text-gray-400 mb-0">Sentimen Negatif</span>
+                        <h2 class="h1 fw-extrabold mb-2">{{ processed_data.sentiment_counts.get('Negatif', 0) }}</h2>
+                        <div class="small d-flex mt-1">
+                            <span class="text-danger fw-bold">
+                                <i class="bi bi-arrow-down me-1"></i>Komentar
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- <div class="row g-4 mb-5">
+        <div class="col-12">
+            <div class="card border-0 shadow">
+                <div class="card-header d-flex justify-content-between align-items-center">
+                    <h2 class="h5 mb-0">Distribusi Sentimen</h2>
+                </div>
+                <div class="card-body p-4">
+                    <div class="chart-container">
+                        {{ processed_data.plot_url1 | safe if processed_data.plot_url1 }}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
     <div class="row">
+        <div class="col-12 mb-4">
+            <div class="card bg-yellow-100 border-0 shadow">
+                <div class="card-header d-flex justify-content-center align-items-center">
+                    <h2 class="h5 mb-0">Sentimen Komentar Terbuka</h2>
+                </div>
+                <div class="card-body ">
+                    <div>{{ processed_data.plot_url1 | safe if processed_data.plot_url1 }}</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- <div class="row g-4 mb-5">
+        <div class="col-12 col-xl-8">
+            <div class="card border-0 shadow h-100">
+                <div class="card-header d-flex justify-content-between align-items-center">
+                    <h2 class="h5 mb-0">10 Materi Pembelajaran Terbaik</h2>
+                    <a href="{{ url_for('authentication_blueprint.top_materials_page') }}" class="btn btn-sm btn-primary">Lihat Detail</a>
+                </div>
+                <div class="card-body p-4">
+                    <div class="chart-container">
+                        {{ processed_data.plot_url2 | safe if processed_data.plot_url2 }}
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-xl-4">
+            <div class="card border-0 shadow h-100">
+                <div class="card-header d-flex justify-content-between align-items-center">
+                    <h2 class="h5 mb-0">Materi Terpopuler</h2>
+                    <a href="{{ url_for('authentication_blueprint.popular_materials_page') }}" class="btn btn-sm btn-primary">Lihat Detail</a>
+                </div>
+                <div class="card-body p-4">
+                    <div class="chart-container">
+                        {{ processed_data.plot_url4 | safe if processed_data.plot_url4 }}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
+    <div class="row">
+        <div class="col-12">
+            <div class="card border-0 shadow">
+                <div class="card-header d-flex justify-content-between align-items-center">
+                    <h2 class="h5 mb-0">10 Materi Pembelajaran Terbaik</h2>
+                    <a href="{{ url_for('authentication_blueprint.top_materials_page') }}" class="btn btn-sm btn-primary">Lihat Detail</a>
+                </div>
+                <div class="card-body p-4">
+                    <div class="chart-container">
+                        {{ processed_data.plot_url2 | safe if processed_data.plot_url2 }}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12">
+            <div class="card border-0 shadow">
+                <div class="card-header d-flex justify-content-between align-items-center">
+                    <h2 class="h5 mb-0">Materi Terpopuler</h2>
+                    <a href="{{ url_for('authentication_blueprint.popular_materials_page') }}" class="btn btn-sm btn-primary">Lihat Detail</a>
+                </div>
+                <div class="card-body p-4">
+                    <div class="chart-container">
+                        {{ processed_data.plot_url4 | safe if processed_data.plot_url4 }}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12">
+            <div class="card border-0 shadow">
+                <div class="card-header d-flex justify-content-between align-items-center">
+                    <h2 class="h5 mb-0">10 Instruktur Terbaik</h2>
+                    <a href="{{ url_for('authentication_blueprint.top_instructors_page') }}" class="btn btn-sm btn-primary">Lihat Detail</a>
+                </div>
+                <div class="card-body p-4">
+                    <div class="chart-container">
+                        {{ processed_data.plot_url5 | safe if processed_data.plot_url5 }}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% endif %}
+    <!-- <div class="row">
         <div class="col-12 mb-4">
             <div class="card bg-yellow-100 border-0 shadow">
                 <div class="card-body ">
@@ -29,155 +192,7 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-12 col-xl-8">
-            <div class="row">
-                <div class="col-12 mb-4">
-                    <div class="card border-0 shadow">
-                        <div class="card-header">
-                            <div class="row align-items-center">
-                                <div class="col">
-                                    <h2 class="fs-5 fw-bold mb-0">Page visits</h2>
-                                </div>
-                                <div class="col text-end">
-                                    <a href="#" class="btn btn-sm btn-primary">See all</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="table-responsive">
-                            <table class="table align-items-center table-flush">
-                                <thead class="thead-light">
-                                <tr>
-                                    <th class="border-bottom" scope="col">Page name</th>
-                                    <th class="border-bottom" scope="col">Page Views</th>
-                                    <th class="border-bottom" scope="col">Page Value</th>
-                                    <th class="border-bottom" scope="col">Bounce rate</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr>
-                                    <th class="text-gray-900" scope="row">
-                                        /demo/admin/index.html
-                                    </th>
-                                    <td class="fw-bolder text-gray-500">
-                                        3,225
-                                    </td>
-                                    <td class="fw-bolder text-gray-500">
-                                        $20
-                                    </td>
-                                    <td class="fw-bolder text-gray-500">
-                                        <div class="d-flex">
-                                            <svg class="icon icon-xs text-danger me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.293 7.707a1 1 0 010-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 01-1.414 1.414L11 5.414V17a1 1 0 11-2 0V5.414L6.707 7.707a1 1 0 01-1.414 0z" clip-rule="evenodd"></path></svg>
-                                            42,55%
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <th class="text-gray-900" scope="row">
-                                        /demo/admin/forms.html
-                                    </th>
-                                    <td class="fw-bolder text-gray-500">
-                                        2,987
-                                    </td>
-                                    <td class="fw-bolder text-gray-500">
-                                        0
-                                    </td>
-                                    <td class="fw-bolder text-gray-500">
-                                        <div class="d-flex">
-                                            <svg class="icon icon-xs text-success me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M14.707 12.293a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 111.414-1.414L9 14.586V3a1 1 0 012 0v11.586l2.293-2.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
-                                            43,24%
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <th class="text-gray-900" scope="row">
-                                        /demo/admin/util.html
-                                    </th>
-                                    <td class="fw-bolder text-gray-500">
-                                        2,844
-                                    </td>
-                                    <td class="fw-bolder text-gray-500">
-                                    294
-                                    </td>
-                                    <td class="fw-bolder text-gray-500">
-                                        <div class="d-flex">
-                                            <svg class="icon icon-xs text-success me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M14.707 12.293a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 111.414-1.414L9 14.586V3a1 1 0 012 0v11.586l2.293-2.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
-                                            32,35%
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <th class="text-gray-900" scope="row">
-                                        /demo/admin/validation.html
-                                    </th>
-                                    <td class="fw-bolder text-gray-500">
-                                        2,050
-                                    </td>
-                                    <td class="fw-bolder text-gray-500">
-                                        $147
-                                    </td>
-                                    <td class="fw-bolder text-gray-500">
-                                        <div class="d-flex">
-                                            <svg class="icon icon-xs text-danger me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.293 7.707a1 1 0 010-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 01-1.414 1.414L11 5.414V17a1 1 0 11-2 0V5.414L6.707 7.707a1 1 0 01-1.414 0z" clip-rule="evenodd"></path></svg>
-                                            50,87%
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <th class="text-gray-900" scope="row">
-                                        /demo/admin/modals.html
-                                    </th>
-                                    <td class="fw-bolder text-gray-500">
-                                        1,483
-                                    </td>
-                                    <td class="fw-bolder text-gray-500">
-                                        $19
-                                    </td>
-                                    <td class="fw-bolder text-gray-500">
-                                        <div class="d-flex">
-                                            <svg class="icon icon-xs text-success me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M14.707 12.293a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 111.414-1.414L9 14.586V3a1 1 0 012 0v11.586l2.293-2.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
-                                            26,12%
-                                        </div>
-                                    </td>
-                                </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-12 col-xl-4">
-            <div class="col-12 px-0 mb-4">
-                <div class="card border-0 shadow">
-                    <div class="card-header d-flex flex-row align-items-center flex-0 border-bottom">
-                        <div class="d-block">
-                            <div class="h6 fw-normal text-gray mb-2">Total Peserta</div>
-                            <h2 class="h3 fw-extrabold">452</h2>
-                            <div class="small mt-2">                               
-                                <span class="fas fa-angle-up text-success"></span>                                   
-                                <span class="text-success fw-bold">18.2%</span>
-                            </div>
-                        </div>
-                        <div class="d-block ms-auto">
-                            <div class="d-flex align-items-center text-end mb-2">
-                                <span class="dot rounded-circle bg-gray-800 me-2"></span>
-                                <span class="fw-normal small">July</span>
-                            </div>
-                            <div class="d-flex align-items-center text-end">
-                                <span class="dot rounded-circle bg-secondary me-2"></span>
-                                <span class="fw-normal small">August</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card-body p-2">
-                        <div class="ct-chart-ranking ct-golden-section ct-series-a"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    </div> -->
     <div class="modal fade" id="uploadModal" tabindex="-1" aria-labelledby="uploadModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -187,13 +202,17 @@
                 </div>
                 <div class="modal-body">
                     <!-- Upload Form -->
-                    <form>
+                    <form method="post" enctype="multipart/form-data">
                         <div class="mb-3">
-                            <label for="fileUpload" class="form-label">Choose file to upload</label>
-                            <input type="file" class="form-control" id="fileUpload" name="fileUpload">
+                            <label for="fileUpload" class="form-label">Choose file csv feedback</label>
+                            <input type="file" class="form-control" id="file_csv" name="file_csv" accept=".csv">
                         </div>
                         <div class="mb-3">
-                            <button type="submit" class="btn btn-primary">Upload</button>
+                            <label for="fileUpload" class="form-label">Choose file csv Instruktur</label>
+                            <input type="file" class="form-control" id="file_excel" name="file_excel" accept=".xlsx,.xls">
+                        </div>
+                        <div class="mb-3">
+                            <button type="submit" class="btn btn-primary">Analisa</button>
                         </div>
                     </form>
                 </div>
