--- a/apps/templates/home/tables-bootstrap-tables.html
+++ b/apps/templates/home/tables-bootstrap-tables.html
@@ -40,6 +40,13 @@
               <table class="table table-centered table-nowrap mb-0 rounded">
                 {{ top_materials | safe }}
               </table>
+              {% if plot_url2 %}
+              <div class="mt-3">
+                  {{ plot_url2| safe }}
+              </div>
+          {% else %}
+              <p>Data grafik tidak tersedia.</p>
+          {% endif %}
           </div>
       </div>
   </div>
