--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -112,7 +112,7 @@
       <li class="nav-item {% if 'dashboard' in segment %} active {% endif %}">
         <a
           class="nav-link"
-          href="{{ url_for('authentication_blueprint.upload_data_page') }}"
+          href="{{ url_for('authentication_blueprint.upload_data') }}"
         >
           <span class="sidebar-icon">
             <svg
