--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -40,6 +40,13 @@
       href="https://themesberg.com/product/admin-dashboard/volt-premium-bootstrap-5-dashboard"
     />
 
+    <!-- Bootstrap Icons -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+    {% block stylesheets %}{% endblock stylesheets %}
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://demo.themesberg.com/volt-pro" />
