--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -17,79 +17,137 @@
 -->
 <!DOCTYPE html>
 <html lang="en">
-
-<head> 
+  <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<!-- Primary Meta Tags -->
+    <!-- Primary Meta Tags -->
 
-<title>
-    Pusdiklat - {% block title %}{% endblock %} | PLN
-</title>
+    <title>Pusdiklat - {% block title %}{% endblock %} | PLN</title>
 
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="title" content="Volt - Free Bootstrap 5 Dashboard">
-<meta name="author" content="Themesberg">
-<meta name="description" content="Volt Pro is a Premium Bootstrap 5 Admin Dashboard featuring over 800 components, 10+ plugins and 20 example pages using Vanilla JS.">
-<meta name="keywords" content="bootstrap 5, bootstrap, bootstrap 5 admin dashboard, bootstrap 5 dashboard, bootstrap 5 charts, bootstrap 5 calendar, bootstrap 5 datepicker, bootstrap 5 tables, bootstrap 5 datatable, vanilla js datatable, themesberg, themesberg dashboard, themesberg admin dashboard" />
-<link rel="canonical" href="https://appseed.us/product/volt-dashboard/flask/">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="title" content="Volt - Free Bootstrap 5 Dashboard" />
+    <meta name="author" content="Themesberg" />
+    <meta
+      name="description"
+      content="Volt Pro is a Premium Bootstrap 5 Admin Dashboard featuring over 800 components, 10+ plugins and 20 example pages using Vanilla JS."
+    />
+    <meta
+      name="keywords"
+      content="bootstrap 5, bootstrap, bootstrap 5 admin dashboard, bootstrap 5 dashboard, bootstrap 5 charts, bootstrap 5 calendar, bootstrap 5 datepicker, bootstrap 5 tables, bootstrap 5 datatable, vanilla js datatable, themesberg, themesberg dashboard, themesberg admin dashboard"
+    />
+    <link
+      rel="canonical"
+      href="https://appseed.us/product/volt-dashboard/flask/"
+    />
 
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://appseed.us/product/volt-dashboard/flask/">
-<meta property="og:title" content="Volt - Free Bootstrap 5 Dashboard">
-<meta property="og:description" content="Volt Pro is a Premium Bootstrap 5 Admin Dashboard featuring over 800 components, 10+ plugins and 20 example pages using Vanilla JS.">
-<meta property="og:image" content="https://themesberg.s3.us-east-2.amazonaws.com/public/products/volt-pro-bootstrap-5-dashboard/volt-pro-preview.jpg">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://appseed.us/product/volt-dashboard/flask/"
+    />
+    <meta property="og:title" content="Volt - Free Bootstrap 5 Dashboard" />
+    <meta
+      property="og:description"
+      content="Volt Pro is a Premium Bootstrap 5 Admin Dashboard featuring over 800 components, 10+ plugins and 20 example pages using Vanilla JS."
+    />
+    <meta
+      property="og:image"
+      content="https://themesberg.s3.us-east-2.amazonaws.com/public/products/volt-pro-bootstrap-5-dashboard/volt-pro-preview.jpg"
+    />
 
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://appseed.us/product/volt-dashboard/flask/">
-<meta property="twitter:title" content="Volt - Free Bootstrap 5 Dashboard">
-<meta property="twitter:description" content="Volt Pro is a Premium Bootstrap 5 Admin Dashboard featuring over 800 components, 10+ plugins and 20 example pages using Vanilla JS.">
-<meta property="twitter:image" content="https://themesberg.s3.us-east-2.amazonaws.com/public/products/volt-pro-bootstrap-5-dashboard/volt-pro-preview.jpg">
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://appseed.us/product/volt-dashboard/flask/"
+    />
+    <meta
+      property="twitter:title"
+      content="Volt - Free Bootstrap 5 Dashboard"
+    />
+    <meta
+      property="twitter:description"
+      content="Volt Pro is a Premium Bootstrap 5 Admin Dashboard featuring over 800 components, 10+ plugins and 20 example pages using Vanilla JS."
+    />
+    <meta
+      property="twitter:image"
+      content="https://themesberg.s3.us-east-2.amazonaws.com/public/products/volt-pro-bootstrap-5-dashboard/volt-pro-preview.jpg"
+    />
 
-<!-- Favicon -->
-<link rel="apple-touch-icon" sizes="120x120" href="{{ config.ASSETS_ROOT }}/img/img/logo-md.png">
-<link rel="icon" type="image/png" sizes="32x32" href="{{ config.ASSETS_ROOT }}/img/logo-md.png">
-<link rel="icon" type="image/png" sizes="16x16" href="{{ config.ASSETS_ROOT }}/img/logo-md.png">
-<link rel="manifest" href="{{ config.ASSETS_ROOT }}/img/favicon/site.webmanifest">
-<link rel="mask-icon" href="{{ config.ASSETS_ROOT }}/img/favicon/safari-pinned-tab.svg" color="#ffffff">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="theme-color" content="#ffffff">
+    <!-- Favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="{{ config.ASSETS_ROOT }}/img/img/logo-md.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="{{ config.ASSETS_ROOT }}/img/logo-md.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="{{ config.ASSETS_ROOT }}/img/logo-md.png"
+    />
+    <link
+      rel="manifest"
+      href="{{ config.ASSETS_ROOT }}/img/favicon/site.webmanifest"
+    />
+    <link
+      rel="mask-icon"
+      href="{{ config.ASSETS_ROOT }}/img/favicon/safari-pinned-tab.svg"
+      color="#ffffff"
+    />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="theme-color" content="#ffffff" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
 
-<link type="text/css" href="{{ config.ASSETS_ROOT }}/vendor/sweetalert2/dist/sweetalert2.min.css" rel="stylesheet">
+    <link
+      type="text/css"
+      href="{{ config.ASSETS_ROOT }}/vendor/sweetalert2/dist/sweetalert2.min.css"
+      rel="stylesheet"
+    />
 
-<link type="text/css" href="{{ config.ASSETS_ROOT }}/vendor/notyf/notyf.min.css" rel="stylesheet">
-<link type="text/css" href="{{ config.ASSETS_ROOT }}/css/volt.css" rel="stylesheet">
-<link rel="stylesheet" type="text/css" src="dygraph.css" />
-<script src="https://cdn.plot.ly/plotly-1.8.0.min.js"></script>
-<script type="text/javascript" src="dygraph.js"></script>
-<script src='https://cdn.plot.ly/plotly-2.35.2.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js'></script>
+    <link
+      type="text/css"
+      href="{{ config.ASSETS_ROOT }}/vendor/notyf/notyf.min.css"
+      rel="stylesheet"
+    />
+    <link
+      type="text/css"
+      href="{{ config.ASSETS_ROOT }}/css/volt.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" src="dygraph.css" />
+    <script src="https://cdn.plot.ly/plotly-1.8.0.min.js"></script>
+    <script type="text/javascript" src="dygraph.js"></script>
+    <script src="https://cdn.plot.ly/plotly-2.35.2.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
 
-<!-- Specific Page JS goes HERE  -->    
-{% block stylesheets %}{% endblock stylesheets %}
-
-</head>
-<body>
-
+    <!-- Specific Page JS goes HERE  -->
+    {% block stylesheets %}{% endblock stylesheets %}
+  </head>
+  <body>
     {% include 'includes/sidebar.html' %}
-    
+
     <main class="content">
-
-      {% include 'includes/navigation.html' %}
-
-      {% block content %}{% endblock content %} 
-
-      {% include 'includes/settings-box.html' %}
-
-      {% include 'includes/footer.html' %}
-
+      {% include 'includes/navigation.html' %} {% block content %}{% endblock
+      content %} {% include 'includes/settings-box.html' %} {% include
+      'includes/footer.html' %}
     </main>
 
-  {% include 'includes/scripts.html' %}
-    
-  <!-- Specific Page JS goes HERE  -->
-  {% block javascripts %}{% endblock javascripts %}  
-      
-</body>
+    {% include 'includes/scripts.html' %}
+
+    <!-- Specific Page JS goes HERE  -->
+    {% block javascripts %}{% endblock javascripts %}
+  </body>
 </html>
